<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_"
        android:title="@string/home" />
    <item
        android:id="@+id/gradeCalc"
        android:icon="@drawable/ic_grade_black"
        android:title="@string/grade_calculator" />
    <item
        android:id="@+id/gpaCalc"
        android:title="@string/gpa_calculator" />
    <item
        android:id="@+id/past"
        android:title="@string/past_courses" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle_black_"
        android:title="@string/my_account" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/settings" />
    </group>
</menu>